--- a/tox.ini
+++ b/tox.ini
@@ -7,5 +7,5 @@ deps =
     -rrequirements.txt
 commands =
     # NOTE: you can run any command line tool here - not just tests
-    coverage run -m pytest .
+    coverage run -m pytest . --junitxml=junit-{envname}.xml
     coverage report
